--- a/e-shop/package.json
+++ b/e-shop/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist --branch gh-pages"
+    "deploy": "gh-pages -d dist"
+
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
