--- a/e-shop/package.json
+++ b/e-shop/package.json
@@ -1,5 +1,5 @@
 {
- "homepage": "https://kevinruvunangiza.github.io/eshop/",
+ "homepage": "http://kevinruvunangiza.github.io/eshop/",
  "name": "e-shop",
  "private": true,
  "version": "0.0.0",
@@ -10,7 +10,7 @@
   "lint": "eslint .",
   "preview": "vite preview",
   "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
+  "deploy": "gh-pages -d build"
  },
  "dependencies": {
   "@fortawesome/fontawesome-svg-core": "^6.7.2",
